<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mj5waghmare.birthday.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Relative"
    >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:background="@drawable/bithh"
            android:contentDescription="@string/im" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button"
            android:layout_alignStart="@+id/editText"
            android:layout_marginBottom="48dp"
            android:ems="10"
            android:hint="@string/DateOfBirth"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/editText2"
            android:layout_marginBottom="27dp"
            android:text="@string/add_buddy" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/choose_image"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_alignEnd="@+id/editText2"
            android:text="@string/list"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/editText"
            android:layout_below="@+id/editText"
            android:src="@drawable/calendar" android:contentDescription="@string/todo" />

</RelativeLayout>




